--- a/Passenger.Core/Passenger.Core.csproj
+++ b/Passenger.Core/Passenger.Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Passenger.Core</AssemblyName>
+    <PackageId>Passenger.Core</PackageId>
   </PropertyGroup>
 
 </Project>
